<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstFragment">

    <LinearLayout
        android:id="@+id/calc_panel"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:padding="30dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/problem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-light"
            tools:text="5+10" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="50sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/teal_200"
            tools:text="15" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="24dp"
        android:paddingStart="24dp">

        <!--
        android:stretchColumns="*"-->

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_del"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:textColor="@color/red"
                android:text="@string/button_delete" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_bracketIn"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:textColor="@color/teal_200"
                android:text="@string/button_bracketIn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_bracketOut"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:textColor="@color/teal_200"
                android:text="@string/button_bracketOut" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_mul"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:textColor="@color/teal_200"
                android:text="@string/button_multiply" />

        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_seven"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/button_seven" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_eight"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/button_eight" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_nine"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/button_nine" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_div"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:textColor="@color/teal_200"
                android:text="@string/button_divide" />

        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_four"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/button_four" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_five"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/button_five" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_six"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/button_six" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_min"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:textColor="@color/teal_200"
                android:text="@string/button_minus" />

        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_one"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/button_one" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_two"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/button_two" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_three"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/button_three" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_plus"
                android:layout_width="0dp"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:textColor="@color/teal_200"
                android:text="@string/button_plus" />

        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:textColor="@color/purple_200"
                android:text="@string/button_clear" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_zero"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/button_zero" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_dot"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/button_dot" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_equals"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                style="@style/Button_Style"
                android:textColor="@color/teal_200"
                android:text="@string/button_equals" />

        </TableRow>

    </TableLayout>
</LinearLayout>