<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardView="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.lemonboy.handycalculator.viewmodel.CalculatorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.home.CalculatorFragment">

        <!--
        android:orientation="vertical"
        android:layout_margin="16dp"
        -->

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/screenCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            cardView:cardCornerRadius="4dp"
            cardView:cardElevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/calc_panel"
                android:layout_width="match_parent"
                android:layout_height="240dp">

                <!--
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:padding="30dp"
                android:orientation="vertical"
                -->

                <ImageView
                    android:id="@+id/showHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/icon_history"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"/>

                <!--
                android:fontFamily="sans-serif-light"
                -->

                <TextView
                    android:id="@+id/problem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toTopOf="@+id/answer"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="5+10"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:id="@+id/answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="50sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="15"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"/>

                <!--android:fontFamily="sans-serif"-->

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <!--
            android:stretchColumns="*"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            -->

            <TableRow>

                <Button
                    android:id="@+id/button_del"
                    style="@style/Button_Style"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_delete"
                    android:textColor="@color/red" />

                <Button
                    android:id="@+id/button_bracketIn"
                    style="@style/Button_Style"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_bracketIn"
                    android:textColor="@color/teal_200" />

                <Button
                    android:id="@+id/button_bracketOut"
                    style="@style/Button_Style"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_bracketOut"
                    android:textColor="@color/teal_200" />

                <!--
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                -->

                <Button
                    android:id="@+id/button_mul"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/button_multiply"
                    android:textColor="@color/teal_200" />

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button_seven"
                    style="@style/Button_Style"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_seven" />

                <Button
                    android:id="@+id/button_eight"
                    style="@style/Button_Style"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_eight" />

                <Button
                    android:id="@+id/button_nine"
                    style="@style/Button_Style"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_nine" />

                <Button
                    android:id="@+id/button_div"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/button_divide"
                    android:textColor="@color/teal_200" />

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button_four"
                    style="@style/Button_Style"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_four" />

                <Button
                    android:id="@+id/button_five"
                    style="@style/Button_Style"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_five" />

                <Button
                    android:id="@+id/button_six"
                    style="@style/Button_Style"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_six" />

                <Button
                    android:id="@+id/button_min"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/button_minus"
                    android:textColor="@color/teal_200" />

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button_one"
                    style="@style/Button_Style"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_one" />

                <Button
                    android:id="@+id/button_two"
                    style="@style/Button_Style"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_two" />

                <Button
                    android:id="@+id/button_three"
                    style="@style/Button_Style"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_three" />

                <Button
                    android:id="@+id/button_plus"
                    style="@style/Button_Style"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:text="@string/button_plus"
                    android:textColor="@color/teal_200" />

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button_clear"
                    style="@style/Button_Style"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_clear"
                    android:textColor="@color/purple_200" />

                <Button
                    android:id="@+id/button_zero"
                    style="@style/Button_Style"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_zero" />

                <Button
                    android:id="@+id/button_dot"
                    style="@style/Button_Style"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_dot" />

                <Button
                    android:id="@+id/button_equals"
                    style="@style/Button_Style"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:text="@string/button_equals"
                    android:textColor="@color/teal_200" />

                <!--
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.calculate()}"
                -->

            </TableRow>

        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>